# quickstep

./: CMakeLists.txt
log/: CMakeLists.txt  Helper.cpp  Helper.hpp  Log Manager Design-Shixuan.odt  LogManager.cpp  LogManager.hpp  LogRecord.cpp  LogRecord.hpp  LogTable.cpp  LogTable.hpp  Macros.cpp  Macros.hpp  test.cpp
log/tests/: Helper_unittest.cpp  LogManager_unittest.cpp  LogTable_unittest.cpp
storage/: AggregationOperationState.cpp  AggregationOperationState.hpp  BasicColumnStoreTupleStorageSubBlock.cpp  BasicColumnStoreTupleStorageSubBlock.hpp  CMakeLists.txt  CompressedColumnStoreTupleStorageSubBlock.cpp  CompressedColumnStoreTupleStorageSubBlock.hpp  CompressedPackedRowStoreTupleStorageSubBlock.cpp  CompressedPackedRowStoreTupleStorageSubBlock.hpp  InsertDestination.cpp  InsertDestination.hpp  InsertDestinationInterface.hpp  PackedRowStoreTupleStorageSubBlock.cpp  PackedRowStoreTupleStorageSubBlock.hpp  SplitRowStoreTupleStorageSubBlock.cpp  SplitRowStoreTupleStorageSubBlock.hpp  SplitRowStoreValueAccessor.hpp  StorageBlock.cpp  StorageBlock.hpp  StorageManager.cpp  StorageManager.hpp  TupleStorageSubBlock.hpp  ValueAccessor.hpp
storage/tests/: MockTupleStorageSubBlock.hpp  Redo_unittest.cpp  StorageBlockSort_unittest.cpp  Undo_unittest.cpp
types/containers/: ColumnVectorsValueAccessor.hpp
