add_library(quickstep_transaction_log_LogRecord
            LogRecord.cpp
            LogRecord.hpp)

add_library(quickstep_transaction_log_LogManager
            LogManager.cpp
            LogManager.hpp)

add_library(quickstep_transaction_log_LogTable
            LogTable.cpp
            LogTable.hpp)
